--- a/public/code/logistic_gallup.Rmd
+++ b/public/code/logistic_gallup.Rmd
@@ -11,8 +11,7 @@ tags: []
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
-
+<a name="top"></a>
 This post offers an example of performing logistic regression in R. I'll cover the following topics:
 
 <div style= "float:right;position: relative; top: -10px; left: 10px;">
@@ -37,9 +36,7 @@ ___
 # Loading required pacakges:
 require("tidyverse")
 require("foreign")
-require("car")
 require("broom")
-require("stargazer")
 require("RColorBrewer")
 require("scales")
 ```
@@ -67,10 +64,11 @@ glimpse(gallup)
 ___
 
 <a name="prep"></a>
-**Preparing Data**  
+**Preparing Data**   
 
 ___
-
+<div style="text-align: right">[Back to Top](#top)</div> 
+<br>
 Let's start by examining age. It seems reasonable to expect support for a somewhat traditional belief to vary across generations. First, I remove any missing values and then plot a histogram. We can see a fairly normal distirbution centered around the mean of 52.
 
 ```{r, message=FALSE}
@@ -179,6 +177,30 @@ ggplot(gallup, aes(region)) +
   geom_bar(stat = "count", aes(fill = region))
 ```
 
+Moving to our dependent variable, we have a four-category response to the question:  
+> As a Catholic, how important is each of the following to you?  Would you say the following is or are very important, somewhat important, or not important at all?  E. A celibate male clergy
+
+```{r}
+table(gallup$celclerg)
+```
+
+Because we're using a logistic regression, our response must be in binary form. Ideally, we would use a multinomial model to preserve the variation given by a three-level variable, but for our purposes, we'll collapse into two categories along an "important" vs "not important" dichotomy. We could also reasonably drop the "somewhat important" category to leave just those that feel strongly either way. No matter the decision, make sure to justify your rationale! 
+```{r}
+# Initialize new variable "celimp"
+gallup$celimp <- NA
+
+# Recode 
+gallup$celimp[gallup$celclerg == 'Not important at all'] <- 0
+gallup$celimp[gallup$celclerg == 'Somewhat important'] <- 1
+gallup$celimp[gallup$celclerg == 'Very important'] <- 1
+table(gallup$celimp)
+
+# Filter only those in our new categories
+gallup <- filter(gallup, celimp == 0 | celimp == 1)
+```
+
+
+
 Our prepared dataset should have 819 observations of 98 variables after cleaning measures of age, education, sex, attendance, political identification and US region. 
 
 ```{r}
@@ -196,5 +218,144 @@ ___
 **Fitting Logistic Model**  
 
 ___
+<div style="text-align: right">[Back to Top](#top)</div> 
+<br>
+With a clean dataset, we can run our logistic model with the following code. `glm` for generalized linear model with the arguments:  
+
+> glm(DV ~ IV1 + IV2 + IV3..., data = dataset, family = binomial("logit"))
+
+Make sure to specify which variables to treat as categorical using the `factor()` notation.
+
+```{r}
+model <- glm(celimp ~ female + factor(educ2) + age + factor(partyid) + factor(region) + factor(attend), data = gallup, family = binomial("logit"))
+```
+
+Our logistic model is now saved as an object in R. Using base R, we can print a summary to the console with the following code.
+```{r}
+summary(model)
+```
+
+Before turning to substantive interpretation, let's get our model in a readable format. As [David Robinson notes](http://varianceexplained.org/r/broom-intro/), the printed summary isn't exactly a format we're used to working with. Luckily the `broom` package converts statistical models into tidy data frames. Feeding our model through `tidy()` gives us a data frame for our coefficients, with each row corresponding to a regression term and each column providing a generated statistic: slope estimate, standard error, p-values, confidence intervals, etc. 
+
+```{r}
+mod_coef <- tidy(model, conf.int = TRUE)
+head(mod_coef)
+```
+
+It may not look like much of a difference, but once in this format, we can apply all our tidy functions to the results of our model. For example, let's examine a plot of our coefficient estimates. 
+```{r}
+ggplot(mod_coef, aes(estimate, term, color = term)) +
+  geom_point() +
+  geom_errorbarh(aes(xmin = conf.low, xmax = conf.high)) +
+  geom_vline(xintercept = 0) +
+  scale_color_discrete(guide = FALSE)
+
+```
+
+If you're like me, estimates of the log-odds don't mean much. By exponentiating our coefficients (and confidence intervals), we can create odds ratios for easier interpretation. Taking `(odds ratio - 1) * 100` I calculate the percentage change. We can also add a new term `sig` for whether our confidence intervals overlap with 1 (our null value in terms of odds ratios).
+
+```{r}
+mod_coef <- tidy(model, conf.int = TRUE) %>% 
+  mutate(OR = exp(estimate),
+         OR_ll = exp(conf.low),
+         OR_ul = exp(conf.high),
+         sig = ifelse(OR_ll < 1 & OR_ul <1 | OR_ll >1 & OR_ul >1, 
+                      1, 
+                      0))
+head(mod_coef)
+```
+
+The following plot presents our coefficient estimates and confidence intervals, in terms of odds ratios. I also color by our new variable `sig` to highlight estimates that don't overlap with our null value. PS - The intercept estimate throws off the scale of our plot, so I constrain the x-axis to a reasonable range. 
+```{r}
+ggplot(mod_coef, aes(OR, term, color = sig)) +
+  geom_point() + 
+  geom_errorbarh(aes(xmin = OR_ll, xmax = OR_ul)) +
+  geom_vline(xintercept = 1) +
+  scale_x_continuous(limits = c(-0.5,2.5)) +
+  scale_color_continuous(guide = FALSE)
+```
+
+Alternatively, you could color by p-value, with darker plots corresponding to "more significant" estiamtes. This method underscores the importance of treating significance tests as a contiuum rather than a binned range of "significant" and "non-significant" values. See [Sterne & Smith 2001](http://www.jayskaufman.com/uploads/3/0/8/9/30891283/sterne_&_davey_smith_whats_wrong_with_significance_tests_bmj.pdf).
+```{r}
+ggplot(mod_coef, aes(OR, term, color = p.value)) +
+  geom_point() +
+  geom_errorbarh(aes(xmin = OR_ll, xmax = OR_ul)) +
+  geom_vline(xintercept = 1) +
+  scale_x_continuous(limits = c(-0.5,2.5)) 
+```
+
+To further improve readability, we could express our estimates in terms of percentage change: "For every one-unit increase in X, respondents are X% more likely to say celibate clergy are important." Or for our categorical variables: "Compared to someone in category A, someone in category B is X% more likely to say celibate clergy are important." Subtracting one from our odds ratios and multiplying by 100 gives us this measure.  
+```{r}
+mod_coef <- mod_coef %>% 
+  mutate(per_change = (OR-1)*100,
+         per_ll = (OR_ll-1)*100,
+         per_ul = (OR_ul-1)*100)
+```
+
+Plotting coefficients in terms of percentage change. This plot also adds a text label of the coefficient estimate, provided the confidence interval doesn't overlap the null value. 
+         
+```{r}
+ggplot(mod_coef, aes(per_change, term, color = sig)) +
+  geom_point() + 
+  geom_errorbarh(aes(xmin = per_ll, xmax = per_ul)) +
+  geom_text(aes(label = ifelse(sig == 1, round(per_change, 2), "")), nudge_x = -60) +
+  geom_vline(xintercept = 1) +
+  scale_x_continuous(limits = c(-150,150)) +
+  scale_color_continuous(guide = FALSE)
+```
+
+Thus, we can easily see that compared to a republican (the reference category), a catholic democrat is 35.37% less likely to say celibate clergy are "very important."
 
 
+
+```{r}
+#####################
+# AUGMENT function
+#####################
+# Create dataframe with fitted values (in proportions) plus residuals and stuff
+aug_mod <- augment(model, type.predict = "response")
+
+aug_mod <- augment(model)
+
+head(aug_mod)
+ggplot(aug_mod, aes(.resid, .fitted)) +
+  geom_point()
+
+################################
+# Generate binary predictions
+aug_mod <- aug_mod %>% 
+  mutate(celimp_hat = round(.fitted))
+
+# Confusion matrix
+cm <- aug_mod %>% 
+  select(celimp, celimp_hat) %>% 
+  table() %>% 
+  addmargins()
+cm
+
+# Sensitivity is the true positive rate. Predicted positives / Actual positives.
+# 172/220 = 0.78
+tpr <- cm[3,2] / cm[2,3]
+x <- paste("True positive rate =", round(tpr, 3))
+
+# Specificity is the true negative rate. Predicted negatives / actual negatives. 
+# 396 / 348 = 1.14
+tnr <- cm[3,1] / cm[1,3]
+y <- paste("True negative rate =", round(tnr, 3))
+
+# Overall
+overall <- (cm[1,1] + cm[2,2]) / cm[3,3]
+z <- paste("Overall accuracy =", round(overall, 3))
+
+# Generate new variable: right or wrong
+aug_mod <- aug_mod %>% 
+  mutate(correct = ifelse(celimp == celimp_hat, 1, 0))
+
+# Plotting stuff
+ggplot(aug_mod, aes(factor.attend., .fitted)) +
+  geom_jitter(width = 0.05, 
+              alpha = 0.5, 
+              aes(color = correct))
+```
+
+  
